# Baby_camera_control

./: .gitignore  README.md  requirements.txt
docs/: palm_tracking_algorithm_slides.pptx
src/baby_camera_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/baby_camera_control/baby_camera_control/: __init__.py  calibrator.py  palm_tracker.py  ptz_controller.py  video_recorder.py
src/baby_camera_control/config/: camera.yaml
src/baby_camera_control/launch/: tapo_camera.launch.py
src/baby_camera_control/scripts/: calibrator  palm_tracker  ptz_controller  video_recorder
src/baby_camera_control/src/: rtsp_image_publisher.cpp
